--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,18 @@ body {
     font-family: 'Montserrat', sans-serif;
     padding: 0;
     margin: 0;
-    font-size: 14px;
-    color: #fff;
+    font-size: 16px;
+    color: #000;
 }
 h1, h2, h3, h4, h5, h6 {
     font-weight: 900;
-    text-transform: uppercase;
 }
-h1 {
+ul, li {
+    display: block;
+    padding: 0;
+    margin: 0;  
+}
+.offer__title {
     font-size: 65px;
     letter-spacing: 0.22em;
     border-top: 3px solid #9ab4be;
@@ -17,6 +21,24 @@ h1 {
     width: 485px;
     padding: 10px 0;
     margin: 0 auto;
+    color: #fff;
+    text-transform: uppercase;
+}
+.about__text-title {
+    color: #737373;
+    text-transform: none;
+    font-size: 18px;
+    margin-top: 40px;
+    margin-bottom: 30px;
+}
+.process__title {
+    font-size: 40px;
+    margin: 0;
+}
+.item__title {
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: 400;
 }
 .header {
     background: #30697d url('../img/bg.jpg') no-repeat center top / cover ;
@@ -30,7 +52,7 @@ h1 {
 .mail {
     color: #fff;
     text-decoration: none;
-    
+    font-size: 14px;
 }
 .nav {
     display: flex;
@@ -41,8 +63,149 @@ h1 {
     margin-top: 290px;
     text-align: center;
 }
-.offer p {
+.offer {
     font-size: 20px;
     letter-spacing: 0.1em;
     color: #d0d9dd;
+}
+.about {
+    padding-top: 115px;
+}
+.about__text {
+    width: 670px;
+}
+.about__text-info {
+    color: #7f7f7f;
+    line-height: 1.8em;
+
+}
+.btn {
+    color: #fff;
+    background: #ff2b4a;
+    font-size: 16px;
+    display: block;
+    width: 200px;
+    text-decoration: none;
+    text-align: center;
+    padding: 15px 0;
+    margin-top: 60px;
+}
+.about .container {
+    display: flex;
+    justify-content: space-between;
+}
+.process {
+    background: #f6f6f6;
+    padding-top: 100px;
+    padding-bottom: 125px;
+}
+.process__heading {
+    text-align: center;
+}
+.process__text {
+    color: #6f6f6f;
+    margin-top: 20px;
+}
+.process__list-steps {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 60px;
+}
+.list-steps__item {
+    width: 280px;
+    height: 280px;
+    background: #10c6fc;
+    color: #fff;
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.list-steps__item--purple {
+    background: #835aeb;
+}
+.list-steps__item--blue {
+    background: #002453;
+}
+.list-steps__item--red {
+    background: #ff2b4a;
+}
+.item__title {
+    margin-top: 40px;
+}   
+.portfolio__title {
+    font-family: 'Raleway', sans-serif;
+    font-size: 40px;
+    margin: 0;
+}
+.portfolio {
+    padding-top: 110px;
+    padding-bottom: 120px;
+}
+.portfolio__heading {
+    text-align: center;
+}
+.portfolio__text {
+    color: #737373;
+    margin-top: 45px;
+}
+.portfolio__list-works {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.list-works__item {
+    height: 282px;
+    width: 282px;
+    background: #10c6fc;
+    /* margin-right: 15px; */
+}
+
+.list-works__item:nth-child(2) {
+    background: #835aeb;
+}
+.list-works__item:nth-child(3) {
+    background: #002453;
+}
+.list-works__item:nth-child(4) {
+    background: #ff2b4a;
+}
+.list-works__item:nth-child(5) {
+    width: 578px;
+    height: 280px;
+    background: #835aeb;
+    margin-top: 15px;
+}
+.list-works__item:nth-child(6)  {
+    margin-top: 15px;
+    background: #002453;
+}
+.list-works__item:nth-child(7) {
+    margin-top: 15px;
+    background: #ff2b4a;
+}
+
+
+.footer {
+    background: #222;
+    color: #9c9c9c;
+    font-size: 12px;
+    padding-top: 55px;
+    padding-bottom: 55px;
+    text-align: center;
+}
+.footer__social-list {
+    display: flex;
+    justify-content: center;
+}
+.social__link {
+    color: #fff;
+    font-size: 14px;
+    margin-right: 25px;
+}
+.social-list__item:last-child a {
+    margin-right: 0;
+}
+.social__link:hover {
+    color: #ff2b4a;
 }
